@@ -3,6 +3,8 @@ package org.amirshamaei;
 public class Launcher {
     public static void main(String[] args) {
         //--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
+        //--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls
+//        --add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls
         App.main(args);
     }
 }
